--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -32,6 +32,9 @@
             <% books.forEach((book) => { %>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card no-drag">
+                        <div class="position-absolute top-0 left-0 m-2">
+                            <i class="bi bi-star-fill text-warning"></i> <%= book.favorites_count > 0 ? book.favorites_count : 0 %>
+                        </div>
                         <a class="stretched-link" href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>">
                             <div class="card-body">
                                 <div class="no-print d-flex justify-content-center align-items-center">
