--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,6 +12,7 @@
     <meta property="og:description" content="Ekin'in kitap bilgi portalı projesi">
     <meta property="og:image" content="https://book.ekinn.site/assets/img/ekinnsite_logo.png">
     <meta property="og:url" content="https://book.ekinn.site">
+    <meta name="google-adsense-account" content="ca-pub-9050645484930137">
     <title><%= title %> - Muhteşem Kitap Sitesi</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/icons/bootstrap-icons.css">
@@ -20,6 +21,8 @@
     <style>body{padding-top: 5rem !important;}</style>
     <script src="/assets/js/header.js"></script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9050645484930137"
+     crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FVB79GM3G"></script>
     <script>
