--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -3,6 +3,24 @@ body {
   min-height: 100vh !important;
 }
 
+#comment-editor{border-radius: 0 0 0.375rem 0.375rem;}
+.ql-toolbar{border-radius: 0.375rem 0.375rem 0 0;}
+
+.ql-container {
+  min-height: 10rem;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.ql-editor {
+  height: 100%;
+  flex: 1;
+  overflow-y: auto;
+  width: 100%;
+}
+
 .no-drag{user-drag: none;}
 
 .responsive-big-text{
