--- a/src/views/book-detail.ejs
+++ b/src/views/book-detail.ejs
@@ -1,3 +1,5 @@
+<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet">
 <main class="container-md py-4" data-book-id="<%= book.id %>">
     <div class="d-flex align-items-center mb-3 no-print">
         <a href="/books" class="btn btn-primary d-inline"><i class="bi bi-arrow-left"></i> Geri</a>
@@ -61,7 +63,7 @@
     </div>
 
     <div class="container-fluid my-2">
-        <h2><i class="bi bi-chat-left-text"></i> Yorumlar</h2>
+        <h2 class="mb-3"><i class="bi bi-chat-left-text"></i> Yorumlar</h2>
         <% if(isAuthenticated) { %>
             <div class="container-fluid my-1 alert-sent d-none">
                 <div class="alert alert-success" role="alert">
@@ -69,10 +71,8 @@
                 </div>
             </div>
             <form id="commentForm" method="POST">
-                <div class="form-floating mb-3">
-                    <textarea name="comment" class="form-control" id="commentInput" placeholder="Enter Book Description" required></textarea>
-                    <label for="commentInput">Yorumunuz <span class="text-danger">*</span></label>
-                </div>
+                <input type="hidden" name="comment" id="commentInput" required>
+                <div class="bg-white mb-3" id="comment-editor"></div>
                 <button class="btn bg-primary text-light w-100" type="submit">Yorum Ekle</button>
             </form>
         <% } else { %>
@@ -86,7 +86,7 @@
                     <div class="card my-1 w-100" data-comment-id="<%= comment.id %>">
                         <div class="card-body">
                             <h5 class="card-title comment-user-name"><img class="rounded-circle avatar-img" src="/assets/img/avatars/<%= comment.avatar %>.png" width="48" loading="lazy"> <%= comment.name %> <span class="card-subtitle text-muted comment-date">- <%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></span></h5>
-                            <p class="card-text comment-text"><%= comment.comment %></p>
+                            <p class="card-text comment-text"><%- comment.comment %></p>
                             <div>
                                 <% let likes = null; %>
                                 <% let dislikes = null; %>
@@ -129,6 +129,26 @@
         }
     </script>
         
+    <script>
+        let quill = new Quill('#comment-editor', {
+        theme: 'snow',
+        placeholder: 'Yorum Yazın',
+        modules: {
+            toolbar: [
+            ['bold', 'italic', 'underline'],   // Kalın, italik, altı çizili
+            [{ 'list': 'ordered'}, { 'list': 'bullet' }],  // Sıralı ve madde işaretli liste
+            ]
+        }
+        });
+
+        document.getElementById('commentForm').addEventListener('submit', function(e) {
+            let commentContent = quill.root.innerHTML;
+            commentContent = commentContent.replace(/(<p><br><\/p>\s*)+/g, '');
+            commentContent = commentContent.replace(/^<p><br><\/p>/, '');
+            commentContent = commentContent.replace(/<p><br><\/p>$/, '');
+            document.getElementById('commentInput').value = commentContent;
+        });
+    </script>
 </main>
 <script src="/assets/js/comment.js"></script>
 <script src="/assets/js/likesDislikes.js"></script>
